update:display items success,add .addcart

--- a/app/views/item.html
+++ b/app/views/item.html
@@ -26,13 +26,32 @@
 
     </div><!-- /.container-fluid -->
 </nav>
+
 <div class="container">
-    <div class="jumbotron">
-        <h1>Welcome to Let's Go</h1>
-        <p>商店里进行购物结算时会使用收银机(POS)系统,这台收银机会在结算时根据客户的购物车(Cart)中的商品(Item)和商店
-            正在进行的优惠活动(Promotion)进行结算和打印购物清单。已知该商店正在对部分商品进行“买二赠一”的优惠活动。
-            我们需要实现一个名为printInventory函数，该函数能够将指定格式的数据作为参数输入，然后在浏览器的控制台中输出
-            结算的清单文本。</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Let's Go</a></p>
-    </div>
-</div>
+
+    <div class="panel panel-default">
+        <div class="panel-heading" style="text-align: center"><h4>商品列表</h4></div>
+        <span id="pay_date"></span>
+        <div class="panel-body">
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th>分类</th>
+                    <th>名称</th>
+                    <th>单价(元)</th>
+                    <th>单位</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody class="item-body">
+                    <tr ng-repeat="item in all_items track by $index">
+                        <td>{{item.type}}</td>
+                        <td>{{item.name}}</td>
+                        <td>{{item.price}}</td>
+                        <td>{{item.unit}}</td>
+                        <td><button class="btn btn-primary btm-sm" ng-click="addcart(item.name)">加入购物车</button></td>
+                    </tr>
+                </tbody>
+
+            </table>
+        </div>
