--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="./views/item.html">Let's Go</a>
+            <a class="navbar-brand" href="#/item">Let's Go</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
