--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,18 +8,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/item">Let's Go</a>
+            <a class="navbar-brand" ng-href="#/item">Let's Go</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#/">主页</a></li>
-                <li><a href="#/item">商品列表</a></li>
+                <li class="active"><a ng-href="#/">主页</a></li>
+                <li><a ng-href="#/item">商品列表</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li style="margin-right: 50px;"><a href="#/cart"><span class="glyphicon glyphicon-shopping-cart"></span>购物车({{total_goods}})</a></li>
+                <li style="margin-right: 50px;"><a ng-href="#/cart"><span class="glyphicon glyphicon-shopping-cart"></span>购物车({{total_goods}})</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
 
@@ -32,6 +32,6 @@
             正在进行的优惠活动(Promotion)进行结算和打印购物清单。已知该商店正在对部分商品进行“买二赠一”的优惠活动。
             我们需要实现一个名为printInventory函数，该函数能够将指定格式的数据作为参数输入，然后在浏览器的控制台中输出
             结算的清单文本。</p>
-        <p><a class="btn btn-primary btn-lg" role="button" href="#/item">Let's Go</a></p>
+        <p><a class="btn btn-primary btn-lg" role="button" ng-href="#/item">Let's Go</a></p>
     </div>
 </div>
