--- a/app/views/payment.html
+++ b/app/views/payment.html
@@ -14,12 +14,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#/">主页</a></li>
-                <li><a href="#/item">商品列表</a></li>
+                <li class="active"><a ng-href="#/">主页</a></li>
+                <li><a ng-href="#/item">商品列表</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li style="margin-right: 50px;"><a href="#/cart"><span class="glyphicon glyphicon-shopping-cart"></span>购物车(<span id="count">0</span>)</a></li>
+                <li style="margin-right: 50px;"><a ng-href="#/cart"><span class="glyphicon glyphicon-shopping-cart"></span>购物车(<span id="count">0</span>)</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
 
