--- a/app/views/payment.html
+++ b/app/views/payment.html
@@ -32,7 +32,7 @@
 
     <div class="panel panel-default">
         <div class="panel-heading"><h4>购物清单</h4></div>
-        <span id="pay_date"></span>
+        <span>{{pay_time}}</span>
         <div class="panel-body">
             <table class="table table-bordered">
                 <thead>
